--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
 
     compile 'android.arch.persistence.room:runtime:1.1.0-alpha1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.0-alpha1'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+
+    compile 'com.android.support:design:26.1.0'
 }
