--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,5 @@
 apply plugin: 'com.android.application'
 
-//apply plugin: 'kotlin-android'
-
-//apply plugin: 'kotlin-android-extensions'
-
-//apply plugin: 'kotlin-kapt'
-
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
@@ -27,7 +21,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -38,8 +32,8 @@ dependencies {
     compile 'android.arch.persistence.room:runtime:1.1.0-alpha1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.0-alpha1'
 
+    // Layouts
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
-
     compile 'com.android.support:design:26.1.0'
 }
