--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.jurtz.marcel.sist.ListView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ShoppingListActivity"
+            android:name="com.jurtz.marcel.sist.DetailView"
             android:label="@string/title_activity_shopping_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
